[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/ui/tally_screen/tally_screen.gd" type="Script" id=1]

[node name="TallyScreen" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.690196, 0.658824, 0.658824, 0.509804 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0

[node name="Control" type="Control" parent="CenterContainer"]
margin_left = 640.0
margin_top = 360.0
margin_right = 640.0
margin_bottom = 360.0

[node name="Panel" type="Panel" parent="CenterContainer/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -250.0
margin_right = 200.0
margin_bottom = 250.0

[node name="VBoxContainer_Top" type="VBoxContainer" parent="CenterContainer/Control/Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -50.5
margin_top = 20.0
margin_right = 50.5
margin_bottom = 40.0

[node name="Label_EndOfDay" type="Label" parent="CenterContainer/Control/Panel/VBoxContainer_Top"]
margin_right = 115.0
margin_bottom = 14.0
text = "- Day completed -"

[node name="Label_Date" type="Label" parent="CenterContainer/Control/Panel/VBoxContainer_Top"]
margin_top = 18.0
margin_right = 115.0
margin_bottom = 32.0
text = "Week 3 Day 5"

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Control/Panel"]
anchor_left = 0.5
anchor_top = 0.4
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -73.5
margin_top = -52.0
margin_right = 73.5
margin_bottom = 52.0

[node name="Label_TotalPatronsCount" type="Label" parent="CenterContainer/Control/Panel/VBoxContainer"]
margin_right = 147.0
margin_bottom = 14.0
text = "Total Patrons : 0"

[node name="Label_MaxPatrons" type="Label" parent="CenterContainer/Control/Panel/VBoxContainer"]
margin_top = 18.0
margin_right = 147.0
margin_bottom = 32.0
text = "Max Patrons : 0"

[node name="Label_CurrentLevel" type="Label" parent="CenterContainer/Control/Panel/VBoxContainer"]
visible = false
margin_top = 54.0
margin_right = 147.0
margin_bottom = 68.0
text = "Level 3"

[node name="ProgressBar" type="ProgressBar" parent="CenterContainer/Control/Panel/VBoxContainer"]
visible = false
margin_top = 72.0
margin_right = 147.0
margin_bottom = 86.0

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/Control/Panel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -79.0
margin_top = -40.0
custom_constants/margin_right = 10
custom_constants/margin_bottom = 10

[node name="Button" type="Button" parent="CenterContainer/Control/Panel/MarginContainer"]
margin_right = 69.0
margin_bottom = 30.0
text = "Continue"

[connection signal="pressed" from="CenterContainer/Control/Panel/MarginContainer/Button" to="." method="_on_Button_Continue_pressed"]
